--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dayjs": "^1.9.4",
+    "immer": "^7.0.14",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
